Footer is now invisible until scrolled down to and fixed text in dark mode buttons.

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 100px;
 }
 
 h1 {
@@ -349,7 +348,6 @@ a:hover:not(.footerLink) {
 /* CSS For the Footer */
 
 footer {
-    position: fixed;
     bottom: 0;
     width: 100vw;
     height: 100px;
@@ -379,6 +377,7 @@ footer {
 
 .DarkmodeButton {
     border-radius: 5px;
+    padding: 5px;
     background-color: var(--UofTLightBlue);
     box-shadow: 0px 0px 5px black;
     border-style: none;
